# lychee-meeting

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  qml.qrc
.github/workflows/: archlinux-build.yaml  debian-build.yaml
